[gd_scene load_steps=9 format=3 uid="uid://b81twh1xtva0u"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_tyq1o"]
[ext_resource type="Texture2D" uid="uid://bikw4jl8vwgnk" path="res://Sprites/fon/backgroundColorFall.png" id="2_7ff6n"]
[ext_resource type="Texture2D" uid="uid://bq2wrnl66j5dj" path="res://Sprites/Ui/button_rectangle_flat.svg" id="2_gop8s"]
[ext_resource type="Texture2D" uid="uid://xa8stvyg8bto" path="res://Sprites/Ui/button_rectangle_gloss.svg" id="3_45sgc"]
[ext_resource type="Texture2D" uid="uid://di3cgwtpb75ov" path="res://Sprites/Ui/button_rectangle_gradient.svg" id="4_hixyg"]
[ext_resource type="Theme" uid="uid://b8a7y6ihsexw0" path="res://Themes/ui_theme.tres" id="5_tvxdp"]
[ext_resource type="AudioStream" uid="uid://bjqyjd56ds5wr" path="res://Sounds/Ui/click-a.ogg" id="6_l1rte"]
[ext_resource type="AudioStream" uid="uid://eaeeof4ypsnr" path="res://Sounds/music/tunetank.com_5630_ready-to-play_by_alexey-anisimov.mp3" id="8_lk54w"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tyq1o")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(579, 318)
scale = Vector2(0.564453, 0.320313)
texture = ExtResource("2_7ff6n")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 652.0

[node name="TextureRect" type="TextureRect" parent="TitleLabel"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 649.0

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 220.0
offset_right = 672.0
offset_bottom = 284.0
texture_normal = ExtResource("2_gop8s")
texture_pressed = ExtResource("3_45sgc")
texture_hover = ExtResource("4_hixyg")

[node name="Label" type="Label" parent="StartButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 55.0
theme = ExtResource("5_tvxdp")
text = "Start"

[node name="ExitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 482.0
offset_top = 329.0
offset_right = 674.0
offset_bottom = 393.0
texture_normal = ExtResource("2_gop8s")
texture_pressed = ExtResource("3_45sgc")
texture_hover = ExtResource("4_hixyg")

[node name="Label" type="Label" parent="ExitButton"]
layout_mode = 0
offset_left = 39.0
offset_top = 10.0
offset_right = 156.0
offset_bottom = 55.0
theme = ExtResource("5_tvxdp")
text = "Exit"

[node name="Click_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(480, 220)
stream = ExtResource("6_l1rte")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 319)
zoom = Vector2(2, 2)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_lk54w")
autoplay = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
